--- a/package.json
+++ b/package.json
@@ -147,6 +147,7 @@
     "processenv": "^1.1.0",
     "proxy-addr": "^2.0.7",
     "punycode": "^2.3.0",
+    "purify-css": "^1.2.5",
     "qs": "^6.5.2",
     "range-parser": "^1.2.1",
     "raw-body": "^2.3.3",
