--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,7 @@ MarkupSafe==2.1.3
 mysqlclient==2.2.0
 python-dotenv==1.0.0
 Werkzeug==3.0.0
+Flask-Bootstrap==3.3.7.1
+Flask-WTF==1.2.1
+pymysql==1.0.2
+
